test apiservice